fixed commands, added "autosendmap" function, updated geoip databases

--- a/scripts/commands/cmd_ado.cfg
+++ b/scripts/commands/cmd_ado.cfg
@@ -1,11 +1,15 @@
-// auto demo record for every next round
-// enabled-request by /BudSpencer (2016)
-
-enabled = 1
+//
+// Project: eXtremeServ Sauerbraten
+// File Name: cmd_ado.cfg
+// Author: BudSpencer
+// Date: 2017
+//
+// Purpose: define "ado" command (enable/disable autodemo)
+//
 
 cmd_autodemo = [
 	if ( commandisdisabled "ado" ) [ pm $arg1 ( format $command_is_disabled_msg "ado" ) ] [
-	if ( =s $arg2 "enabled" ) [
+	if ( =s $arg2 "enable" ) [
 		autodemo $__TRUE__
 		pm $arg1 ( format "Autodemo is ^f3enabled ^f7now. Do ^f4#autodemo disabled ^f7to disable autodemo." )
 	] [
@@ -14,10 +18,10 @@ cmd_autodemo = [
 		pm $arg1 ( format "Autodemo is ^f3disabled ^f7now. Do ^f4#autodemo enabled ^f7to enable autodemo." )
 		]
 	] [
-		pm $arg1 ( format "I don't understand ^f3'%1'^f7. Please try ^f4again^f7." $arg2 )
+		pm $arg1 ( format "Sorry, I don't understand ^f3'%1'^f7. Please try ^f4again^f7." $arg2 )
 		]
 	]
 ]
 
 
-registercommand "ado" cmd_autodemo 3 "w" "ado <enabled|disabled> ^f2This command enables/disables automatically recording demo for every next match." 
+registercommand "ado" cmd_autodemo 3 "w" "ado <enable|disable> ^f3This command enables/disables automatically recording demo for every next match." 
