--- a/scripts/commands/cmd_votekick.cfg
+++ b/scripts/commands/cmd_votekick.cfg
@@ -25,7 +25,7 @@ VoteToKick = [
 							] [
 								if ( >= ( getvar $target votes ) ( - $limit 1 ) ) [ 
 									say ( format "Player ^f3%1(%2) ^f7voted to kick Player ^f4%3(%4)^f7. Limit of ^f4%5 ^f7is reached! Player ^f4%3(%4) ^f7get kicked now." ( getname @runner ) @runner ( getname @target ) @target @limit )
-									asleep 50 [ kick @target ( * $hour $votekick_kick_time ) ] // $votekick_kick_time hours ban
+									asleep 50 [ kick $arg1 @target ( * $hour $votekick_kick_time ) "Victim of Votekick command" ] // $votekick_kick_time hours ban
 								]
 							]
 						] [
