--- a/scripts/modules/TimeControler.cfg
+++ b/scripts/modules/TimeControler.cfg
@@ -3,7 +3,7 @@
 // File Name: 			TimeControler.cfg
 // Date: 				2016/2017
 // Author: 				BudSpencer
-// Version: 			1.2.0
+// Version: 			1.3.0
 // 
 // Purpose: 			Cubescript time controler, define some useful constants and commands for #info command
 // New: 				format time routines + uptime format adapter
@@ -39,15 +39,15 @@ gettotalmillis = [ result $totalmillis ; ] // returns current totalmillis
 gametime = [ setroundtime $arg1 ] 
 
 // format time as "days:hours:minutes:seconds" 
-// function wants minutes (and seconds)
+// function wants days, hours, minutes (and seconds)
 returntime_d = [ result ( format "%1:%2:%3:%4" $arg1 $arg2 $arg3 $arg4 ) ]
 // format time as "hours:minutes:seconds" 
-// function wants minutes (and seconds)
+// function wants hours, minutes (and seconds)
 returntime_h = [ result ( format "%1:%2:%3" $arg1 $arg2 $arg3 ) ]
 // format time as "minutes:seconds" 
 // function wants minutes (and seconds)
 returntime_m = [ result ( format "%1:%2" $arg1 $arg2 ) ]
-// return unformated string
+// return formated string
 returnstr = [ result ( format $arg1 ) ]
 
 // return formated uptime string ("years:months:weeks:days:hours:minutes:seconds")
