--- a/server-init.cfg
+++ b/server-init.cfg
@@ -32,6 +32,8 @@ echo "**************************************************************************
 
 // Core scripts, do not delete these lines until you know what are you doing
 
+echo ( format "Started inizializing %1 ..." $serversoftwarename )
+
 exec "scripts/GeoIPContSystemCore.cfg" // geoip continent core -> will move to server-core soon
 exec "scripts/MultiLanguageCore.cfg" // multilanguage function library -> will move to server-core soon
 exec "scripts/DefaultLibrary.cfg" // core for custom cubescript functions and much more
@@ -533,32 +535,41 @@ enabled_commands = [
 	ado allowpriv ammo blist report cb cheater compile delban delpban disc flagrun gtime ghost health help info intermission 
 	kick kill killall listmaps loadmap mapsucks maxclients mm mutespec mute nod pause pban pblist persist pm privmsg rename 
 	savemap echo seen serverstate setpriv shutdown spec specall specmsg spy stats syncauth time uptime votekick whois duel adduser
-	deluser claim logout mastermode
+	deluser claim logout mastermode autosendmap map 
 ]
 
-disabled_commands = [ fpban map warn mlist ]
+disabled_commands = [ fpban warn mlist ]
 
 // ------------------------------------------------------------------------------ \\
 
 //////////////////////////////////// ANTICHEAT CONFIGURATION \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 //////////////// REFERENCE: 1 = enable feature / 0 = disable feature \\\\\\\\\\\\\\\\
 
-enable_anticheat = 1
+//enable_anticheat = 1
 
-enable_check_for_speedhack = 1
-enable_check_for_chainsawhack = 1
-enable_check_for_camping = 1
-enable_check_for_flaghack = 1
+//enable_check_for_speedhack = 1
+//enable_check_for_chainsawhack = 1
+//enable_check_for_camping = 1
+//enable_check_for_flaghack = 1
 
-send_warnings_to_connected_admins = 1
-send_warnings_to_connected_masters = 0
-send_warnings_to_irc = 1
-send_warnings_to_log = 1
+//send_warnings_to_connected_admins = 1
+//send_warnings_to_connected_masters = 0
+//send_warnings_to_irc = 1
+//send_warnings_to_log = 1
 
-write_cheater_infos_to_database = 1
-cheater_db = "default"
-cheater_table = "cheaters"
+//write_cheater_infos_to_database = 1
+//cheater_db = "default"
+//cheater_table = "cheaters"
 
 // ------------------------------------------------------------------------------ \\
 
+////////////////// *** AUTOSENDMAP MODULE CONFIGURATION *** \\\\\\\\\\\\\\\\\\
+enable_autosendmap = 0
+
+// execute module 
+exec "scripts/modules/Autosendmap.cfg"
+
+// ------------------------------------------------------------------------------ \\
+
+echo ( format "Finizialized initzializing %1 ... *READY FOR CLIENTS*" $serversoftwarename )
 
