--- a/scripts/commands/cmd_mm.cfg
+++ b/scripts/commands/cmd_mm.cfg
@@ -14,4 +14,4 @@ cmd_mutemode = [
 	]
 ]
 
-registercommand "mm" cmd_mutemode 3 "|i" "mm <mode> ^f3This command allows you to mute specified groups of persons^f7."
+registercommand "mm" cmd_mutemode 3 "|i" "mm (<mode>) ^f3This command allows you to mute specified groups of persons^f7."
