--- a/scripts/modules/MuteInsulters.cfg
+++ b/scripts/modules/MuteInsulters.cfg
@@ -1,63 +1,17 @@
-// Mute Insulters - final version :D
-// made by /BudSpencer ( 2016 )
+//
+// Project: eXtremeServ Sauerbraten
+// File Name: MuteInsulters.cfg
+// Author: BudSpencer
+// Date: 2017
+// 
+// Purpose: mute insulters with offensive language
+//
 
 
-Mute_Insulters = [
 
-	if ( || ( || ( || ( || ( || ( >= ( strstr $arg2 "motherfucker" ) 0 ) ( >= ( strstr $arg2 "mother fucker" ) 0 ) ) ( || ( >= ( strstr $arg2 "MOTHER FUCKER" ) 0 ) ( >= ( strstr $arg2 "MOTHERFUCKER" ) 0 ) ) ) ( || ( || ( >= ( strstr $arg2 "kinderficker" ) 0 ) ( >= ( strstr $arg2 "KINDERFICKER" ) 0 ) ) ( || ( >= ( strstr $arg2 "NAZI" ) 0 ) ( >= ( strstr $arg2 "nazi" ) 0 ) ) ) ( || ( || ( || ( >= ( strstr $arg2 "jude" ) 0 ) ( >= ( strstr $arg2 "JUDE" ) 0 ) ) ( || ( >= ( strstr $arg2 "wichser" ) 0 ) ( >= ( strstr $arg2 "WICHSER" ) 0 ) ) ) ( || ( || ( >= ( strstr $arg2 "WIXXER" ) 0 ) ( >= ( strstr $arg2 "hurensohn" ) 0 ) ) ( || ( >= ( strstr $arg2 "HURENSOHN" ) 0 ) ( >= ( strstr $arg2 "faggot" ) 0 ) ) ) ) ) ) ( || ( || ( || ( || ( >= ( strstr $arg2 "kanake" ) 0 ) ( >= ( strstr $arg2 "KANAKE" ) 0 ) ) ( || ( >= ( strstr $arg2 "scheiß ausländer" ) 0 ) ( >= ( strstr $arg2 "scheiss ausländer" ) 0 ) ) ) ( || ( || ( >= ( strstr $arg2 "hure" ) 0 ) ( >= ( strstr $arg2 "Jew" ) 0 ) ) ( || ( >= ( strstr $arg2 "jew" ) 0 ) ( >= ( strstr $arg2 "donald trump" ) 0 ) ) ) ( || ( || ( || ( >= ( strstr $arg2 "adolf hitler" ) 0 ) ( >= ( strstr $arg2 "SIEG" ) 0 ) ) ( || ( >= ( strstr $arg2 "Kurwa" ) 0 ) ( >= ( strstr $arg2 "whore" ) 0 ) ) ) ( || ( || ( >= ( strstr $arg2 "niqqa" ) 0 ) ( >= ( strstr $arg2 "NIGGER" ) 0 ) ) ( || ( >= ( strstr $arg2 "nigga" ) 0 ) ( >= ( strstr $arg2 "nigger" ) 0 ) ) ) ) ) ) ) [
-	
-	insult = ( getvar $arg1 insults )
-	insult = ( + $insult 1 )
-	setvar $arg1 insults $insult
-	
-	said_bad_word = ( getvar $arg1 badword )
-	setvar $arg1 badword 1
-	
-	] [ 
-	
-	setvar $arg1 badword 0
-	
-	]
-	
-]
+BADWORDS_ = "spast kanake polake hitler nazi jude fotze hurensohn motherfucker nigger niggers nigga NIGGER MOTHERFUCKER fucker"
+msg_style_1 = "Attention: Don't ^f3insult ^f7other players! Otherwise you'll be ^f4muted^f7. (Count: ^f4%1^f7/3)"
+msg_style_2 = "What did I say? YOU SHALL NOT ^f3INSULT ^f7OTHER ^f4PLAYERS^f7! (Count: ^f4%1^f7/3)"
+msg_style_3 = "Okay, you initiated this ... You're ^f3muted ^f7. Next time look at your ^f4langauge^f7. (Count: ^f4%1^f7/3)"
 
-
-If_Exzessive_Insulter = [ 
-
-if ( = ( getvar $arg1 badword ) 1 ) [
-
-	if ( = $insult 1 ) [
-	
-		pm $arg1 ( format "^f7You should watch your ^f3language ^f7or you will be ^f4muted^f7!" )
-		
-	] [
-	
-	if ( = $insult 2 ) [
-
-		pm $arg1 ( format "^f7Say a ^f3bad word ^f7again and you will be muted ^f4for real^f7!" )
-		
-	] [
-	
-	if ( >= $insult 3 ) [
-
-		pm $arg1 ( format "^f7You have been muted, because you used ^f3offensive language^f7. Next time ^f4attention ^f7what you say." )
-		mute $arg1 1 // mutes player, who say a bad word 3 times
-				
-				]
-				
-			]
-			
-		]
-		
-	]
-	
-]
-	
-	
-addhandler "ontext" Mute_Insulters
-addhandler "ontext" If_Exzessive_Insulter
-addhandler "onsayteam" Mute_Insulters
-addhandler "onsayteam" If_Exzessive_Insulter
-
-
-// *** END OF SCRIPT *** \\
+// THIS SCRIPT WILL BE FINISHED SOON
